Added private chat.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         font-size: 1.1em;
         text-align: center;
         color: #02528c;
+        margin-bottom: 10px;
       }
       .content .chat-label {
         margin: 20px 50px 0 30px;
